<resources>
    <string name="app_name_cn">SleepIntervention</string>
    <string name="app_name_no">无忧</string>
    <string name="action_settings">Settings</string>
    <string name="title_enter_app_no">您现在的决定是？</string>
    <string name="title_enter_app_cn">Your decision is?</string>
    <string name="confirm_enter_no">确认进入</string>
    <string name="confirm_enter_cn">Continue</string>
    <string name="exit_app_no">Return to
[sleep early]</string>
    <string name="exit_app_cn">Exit APP</string>
    <string name="title_button_whitelist_no">请输入设置更改密码</string>
    <string name="title_button_whitelist_cn">Please enter password for changing app setting</string>
    <string name="title_activity_whitelist">Interventions Enabled For Apps</string>
    <string name="title_activity_setup">setup for settings</string>
    <string name="title_activity_whitelist_save_no">应用设置</string>
    <string name="title_activity_whitelist_save_cn">Please select apps to be intervened:</string>
    <string name="title_setting">Setting</string>
    <string name="add_permission">Permissions Detection</string>
    <string name="add_notification">Allow Notification</string>
    <string name="title_setting_noen">设置</string>
    <string name="add_permission_noen">检测权限</string>
    <string name="add_notification_noen">允许通知</string>
    <string name="input_instruction_keep_cn">To use the APP, please type：</string>
    <string name="input_instruction_keep_no">若要继续使用，请输入：</string>
    <string name="input_instruction_need_cn">To use the app, please enter:</string>
    <string name="input_instruction_need_no">我需要打开它吗？

请输入：</string>
    <string name="input_mid_cn">Think: Why </string>
    <string name="input_mid_no">想一想：</string>
    <string name="input_instruction_hint_cn">e.g., finish work / enjoy a book</string>
    <string name="input_instruction_hint_no">例如：专心做事/早点休息/享受当下...</string>
    <string name="input_instruction_eg_cn">Concentrate on your work/Enjoy your life</string>
    <string name="input_instruction_eg_no">专心做事/早点休息/享受当下</string>
    <string name="input_instruction_skip_cn">Skip intervention
Reasons required for skip</string>
    <string name="input_instruction_skip_no">跳过干预
请注意过多跳过需要上报理由哦</string>
    <string name="input_instruction_enter_cn">Continue</string>
    <string name="input_instruction_enter_no">我仍决定继续使用</string>
    <string name="input_instruction_exit_cn">Return to
[sleep early]
</string>
    <string name="input_instruction_exit_no">我决定退出</string>
    <string name="input_instruction_detect_cn">detect wrong input of “</string>
    <string name="input_instruction_detect_no">检测到输入为 “</string>
    <string name="input_instruction_wrong_cn">”，please edit and resubmit</string>
    <string name="input_instruction_wrong_no">”，输入不正确，请修改后提交</string>
    <string name="input_instruction_two_cn">please type at least two words after the second sentence</string>
    <string name="input_instruction_two_no">请在第二句最后至少输入两个字</string>
    <string name="input_instruction_require_cn">Please type in content</string>
    <string name="input_instruction_require_no">必须要输入！返回无效！</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="whitelist_intro_cn">
        "Please set the following two steps:\n"
        "1. Please choose your own values, and our intervention will provide personalized content based on your choice.\n"
        "2. Please select the application you need to intervene. Apps whose color is gray will not be interfered. Click on each application to activate/deactivate the intervention. After completing the settings, click 'Save'.\n"
    </string>
    <string name="whitelist_intro_no">
        "请进行以下两步设置：\n"
        "1. 请选择您合适自己的价值观，我们的干预将根据您的选择提供个性化的内容。\n"
        "2. 请选择您需要干预的应用。颜色显示为灰色的应用将不被干预。点击每个应用可以激活/关闭干预。在完成设置后，点击'保存'。\n"
    </string>
    <string name="permission_succeed_cn">All permissions are authorized successfully</string>
    <string name="permission_succeed_no">权限授权全部成功</string>
    <string name="permission_failed_cn">Authorization failed, please click the button to authorize</string>
    <string name="permission_failed_no">权限授权失败，请点击按钮进行授权</string>
    <string name="refuse_cn">REFUSE</string>
    <string name="refuse_no">拒绝</string>
    <string name="set_time">Set Work and Sleep Time</string>
    <string name="time_set_dialog_title">设置工作与入睡时间</string>
    <string name="reset_time_cn">RESET</string>
    <string name="confirm_time_cn">CONFIRM</string>
    <string name="reset_time_no">重置</string>
    <string name="confirm_time_no">确认</string>
    <string name="cancel_cn">CANCEL</string>
    <string name="cancel_no">确认</string>
    <string name="work_start_time">Work Start Time</string>
    <string name="work_cnd_time">Work End Time</string>
    <string name="sleep_start_time">Sleep Start Time</string>
    <string name="sleep_cnd_time">Sleep End Time</string>
    <string name="edit_text_sleep_work">Please input the password of time setting</string>
    <string name="textDiscipline">Self-control:to act in accordance with my own ideals</string>
    <string name="textHealth">Fitness:to maintain or improve my fitness; to look after my physical and mental health and well-being</string>
    <string name="textOrder">Order:to be orderly and organized</string>
    <string name="textPersistence">Persistence:to continue resolutely, despite problems or difficulties</string>
    <string name="textResponsibility">Responsibility:to be responsible and accountable for my actions</string>
    <string name="textSelfAwareness">Self-awareness:to be aware of my own thoughts, feelings and actions</string>
    <string name="email_cn">For help, please contact with study assistant</string>
    <string name="study_title_cn">Smartphone Use Study</string>
    <string name="fill_form_cn">Fill Consent Form</string>
    <string name="register">Register</string>
    <string name="sync">Sync</string>
    <string name="input_password">Please type password</string>
    <string name="switch_phase">Switch Phase</string>
    <string name="setup_cn">Setup</string>
    <string name="typeout_cn">TypeOut</string>
    <string name="useless_cn">Use less,\nEnjoy more</string>
</resources>