<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/setup_icon"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        app:layout_constraintBottom_toTopOf="@+id/useless_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/typeout_text"
        app:srcCompat="@mipmap/working_icon_transluscent" />

    <TextView
        android:id="@+id/useless_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/useless_cn"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/setup_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/setup_icon" />

    <Button
        android:id="@+id/setup_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setup_cn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/useless_text" />

    <TextView
        android:id="@+id/typeout_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/typeout_cn"
        android:textSize="48sp"
        app:layout_constraintBottom_toTopOf="@+id/setup_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>